<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DONATE"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/restaurant_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/FOOD_TYPE"
            android:textColor="#000000"
            android:textSize="18sp"
            />
        <RadioGroup
            android:id="@+id/resType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VEG"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/non_veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NON_VEG"
                android:textSize="18sp"
                android:layout_margin="5dp"
                />

            <RadioButton
                android:id="@+id/both"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BOTH"
                android:textSize="18sp"
                android:layout_margin="5dp"
                />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QUANTITY"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/quantitylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/Quantity"/>

    <LinearLayout
        style="@style/LinearLayoutStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AVAILABLE_FOR"
        android:textSize="20dp"
        android:id="@+id/duration"
        android:inputType="numberSigned"
        android:layout_marginTop="20dp"/>

    <Button
        style="@style/ButtonStyle"
        android:background="@drawable/button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="donate"
        android:text="@string/DONATE" />

</LinearLayout>