<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/primary_text"
        android:textSize="31sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="Select User"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/userType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:checked="true"
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ADMIN"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <RadioButton
            android:id="@+id/restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RESTAURANT"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
             />

        <RadioButton
            android:id="@+id/charityOrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CHARITY_ORG"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
             />
        <RadioButton
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/USER"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"

            />

    </RadioGroup>
    <Button
        style="@style/ButtonStyle"
        android:layout_marginTop="10dp"
        android:onClick="selectUser"
        android:text="@string/NEXT"
        />
</LinearLayout>
</ScrollView>