<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EDIT_DETAILS"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/PASSWORD"
            android:inputType="text" />

        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <EditText
            android:id="@+id/mail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/EMAIL_ADDRESS"
            android:inputType="textEmailAddress" />


        <LinearLayout
            style="@style/LinearLayoutStyle" />


        <EditText
            android:id="@+id/mobile"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/MOBILE_NUMBER"
            android:inputType="phone" />


        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <EditText
            android:id="@+id/address"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/ENTER_ADDRESS"
             />

        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PROFILE_PHOTO"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:textColorHint="@color/primary_text"
            android:textColor="@color/primary_text"
            android:onClick="selectPhoto"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:id="@+id/icon"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <Button
            style="@style/ButtonStyle"
            android:background="@drawable/button_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="editDetails"
            android:text="@string/EDIT"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>