<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/restaurant"
        android:layout_gravity="center"
         />


        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/USERNAME"
            android:textSize="20sp"
            android:textColorHint="@color/primary_text"

            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"/>



        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/PASSWORD"
            android:textColorHint="@color/primary_text"

            android:inputType="textPassword"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <Button
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:onClick="login"
            android:text="@string/LOGIN"
            />
        <Button
            android:text="@string/SIGN_UP"
            style="@style/ButtonStyle"
            android:onClick="signup"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>

    <Button
        style="@style/ButtonStyle"
        android:onClick="forgotPassword"
        android:text="@string/FORGOT_PASSWORD"
        android:layout_marginTop="10dp"
        />
    </LinearLayout>
</ScrollView>