<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/restaurant"
        android:layout_gravity="center"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:layout_margin="20dp">

        <RadioButton
            android:checked="true"
            android:id="@+id/editprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/EDIT_PROFILE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/DONATE"
            android:textSize="20sp"
            android:textStyle="bold" />



        <RadioButton
            android:id="@+id/viewfeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/View_Feedback"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        style="@style/ButtonStyle"
        android:onClick="next"
        android:text="@string/NEXT"

        />

</LinearLayout>