<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ORGANIZATION_DETAILS"
            android:textColor="@color/primary_text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/profile"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_marginTop="10dp"
            >


            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ORGANIZATION_NAME"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    />

            </TableRow>
            <TableRow android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ADDRESS"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    />
            </TableRow>


            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MAIL"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mail"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    />

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MOBILE_NO"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mobileNumber"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    />
            </TableRow>



        </TableLayout>

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/APPROVE"
            android:onClick="approve"
            android:layout_marginTop="60dp"
            />
    </LinearLayout>
</ScrollView>